# SimThing

./: .gitattributes  .gitignore  AGENTS.md  Cargo.toml  Cursor_Handoff_Phase_M_EML-GADGET-2ABC_Parking_Packet.md  THIRD_PARTY_LICENSES.md  bad.rs  demo.replay.ldjson  deny.toml  f1.rs  f2.rs  f3.rs  f4.rs  f5.rs  i1.rs  i2.rs  i3.rs  s.rs
crates/simthing-clausething/: Cargo.toml
crates/simthing-clausething/src/: clause_scenario_projection.rs  compose_need_weight_bindings.rs  emit.rs  error.rs  expand.rs  hydrate.rs  hydrate_category_economy.rs  hydrate_combat_arena.rs  hydrate_field_economy.rs  hydrate_field_operator.rs  hydrate_palma_feedstock.rs  hydrate_resource_flow.rs  hydrate_scenario.rs  hydrate_scenario_commitment.rs  hydrate_shipsize_decoder.rs  json.rs  lib.rs  literal_install.rs  mapgen_lattice.rs  mapgen_links.rs  mapgen_movement_front.rs  mapgen_neutral_ast.rs  mapgen_palma.rs  mapgen_resource_flow.rs  parse.rs  raw.rs  scope.rs  scope_json.rs  scope_lab.rs  stellaris_names.rs
crates/simthing-clausething/tests/: bh3_authoring_parse.rs  ct_0a_synthetic_smoke.rs  ct_0b_raw_model.rs  ct_0c_expansion.rs  ct_0d_scope.rs  ct_1a_entity.rs  ct_1b_recalc.rs  ct_1c_tradition.rs  ct_2a_intrinsic_flow.rs  ct_2c_category_economy.rs  ct_3b_4a_gpu_projection.rs  ct_3b_4a_headline.rs  ct_3b_4a_session_loop.rs  ct_rf_eml_rate.rs  ct_scenario_container.rs  field_economy_grammar_0.rs  mapgen_constitution_guards.rs  mapgen_lattice_hierarchy.rs  mapgen_links.rs  mapgen_lowerer_child_id_amendment.rs  mapgen_movement_front.rs  mapgen_neutral_ast_parse.rs  mapgen_palma.rs  mapgen_resource_flow.rs  mapgen_rf_stead_binding.rs  mapgen_structural_admission.rs  mapgen_vast_scale_layout.rs  mapgenerator_cli_partition_bridge_lower.rs  mapgenerator_cli_pr10_gpu_compact_evidence.rs  mapgenerator_cli_pr11_scale_envelope.rs  mapgenerator_cli_pr5_generated_static_lowers.rs  mapgenerator_cli_pr6_generated_hyperlanes_lower.rs  mapgenerator_cli_pr8_shape_registry_lower.rs  mapgenerator_cli_pr9_field_operator_lower.rs  mapgenerator_cli_special_routes_lower.rs  stead_spatial_contract_guards.rs  studio_canonical_scenario_0.rs  studio_faction_identity_fields_0.rs  studio_fleet_presence_readout_0.rs  studio_star_naming_pass_0.rs  (+11 more)
crates/simthing-core/: Cargo.toml
crates/simthing-core/src/: accumulator_op.rs  accumulator_op_builder.rs  accumulator_spec.rs  arena_layout.rs  column_index.rs  compiled_accumulator_plan.rs  eml_nodes.rs  eml_registry.rs  evaluate.rs  fission_child_spawn.rs  fission_clone_source.rs  ids.rs  intensity_eml.rs  lib.rs  overlay.rs  placed_participant.rs  property.rs  reduction.rs  registry.rs  simthing.rs  slot_index.rs  structural_coord.rs
crates/simthing-driver/: Cargo.toml
crates/simthing-driver/src/: arena_allocation_oracle.rs  arena_allocation_plan.rs  arena_allocation_sync.rs  arena_hierarchy.rs  arena_participant.rs  arena_pressure.rs  arena_registry.rs  atlas_0080_0.rs  bench_limits.rs  child_share_eml.rs  compound_field_0080_2.rs  control_0080_0.rs  control_0080_1.rs  default_schedule_0080_0.rs  default_schedule_0080_1.rs  demo_0080_0.rs  demo_0080_1.rs  disruption_decay_0080_2.rs  dress_rehearsal_atlas_batch_0_gen.rs  dress_rehearsal_atlas_batch_0_loc.rs  dress_rehearsal_atlas_batch_0_pack.rs  dress_rehearsal_atlas_batch_0_pack_gpu.rs  dress_rehearsal_atlas_batch_0_store.rs  dress_rehearsal_atlas_batch_0_store_gpu.rs  dress_rehearsal_r1_disruption_heatmap.rs  dress_rehearsal_r2_recursive_allocation.rs  dress_rehearsal_r3_capability_mask_down.rs  dress_rehearsal_r4_field_policy_consumption.rs  dress_rehearsal_r4_sead_field_consumption.rs  dress_rehearsal_r5_movement_reenroll.rs  dress_rehearsal_r6_combat_hp_damage.rs  dress_rehearsal_r6b_ship_cohort_reinforcement.rs  dress_rehearsal_r6c_integrated_run.rs  econ_scale_0080_0.rs  field_scheduler.rs  first_slice_mapping_runtime.rs  first_slice_scenario_fixture.rs  gameplay_0080_0.rs  gameplay_0080_1.rs  gated_rates.rs  (+91 more)
crates/simthing-driver/tests/: accumulator_driver_sim_convergence_stub.rs  arena_registry.rs  atlas_0080_0.rs  bh2c_palma_w_feedstock.rs  bh2d_ct4b_100tick_observation.rs  bh2d_ct4b_fixture.rs  bh3_authoring_installs_existing_operator.rs  canonical_galaxymap_mapping_compile.rs  compound_field_0080_2.rs  control_0080_0.rs  control_0080_1.rs  ct_bh3_closeout_sample_driver.rs  ct_bh3_closeout_sample_install.rs  default_schedule_0080_0.rs  default_schedule_0080_1.rs  demo_0080_0.rs  demo_0080_1.rs  disburse_down_fixture.rs  disruption_decay_0080_2.rs  dress_rehearsal_atlas_batch_0_gen.rs  dress_rehearsal_atlas_batch_0_loc.rs  dress_rehearsal_atlas_batch_0_pack.rs  dress_rehearsal_atlas_batch_0_pack_gpu.rs  dress_rehearsal_atlas_batch_0_store.rs  dress_rehearsal_atlas_batch_0_store_gpu.rs  dress_rehearsal_r1_disruption_heatmap.rs  dress_rehearsal_r2_recursive_allocation.rs  dress_rehearsal_r3_capability_mask_down.rs  dress_rehearsal_r4_field_policy_consumption.rs  dress_rehearsal_r4_sead_field_consumption.rs  dress_rehearsal_r5_movement_reenroll.rs  dress_rehearsal_r6_combat_hp_damage.rs  dress_rehearsal_r6b_ship_cohort_reinforcement.rs  dress_rehearsal_r6c_integrated_run.rs  e10r2_arena_participant.rs  e10r3_arena_participant_block.rs  e10r_resource_flow_preflight.rs  e11_arena_allocation.rs  e11_burn_in.rs  e11_burn_in_scenarios.rs  (+212 more)
crates/simthing-feeder/: Cargo.toml
crates/simthing-feeder/src/: capability.rs  dispatcher.rs  lib.rs  maintainer.rs  patcher.rs  scripted_event.rs  work.rs
crates/simthing-feeder/tests/: integration.rs
crates/simthing-gpu/: Cargo.toml
crates/simthing-gpu/src/: accumulator_convergence.rs  accumulator_op.rs  atlas_mask.rs  candidate_f_magnitude.rs  context.rs  emission_accumulator.rs  indexed_scatter.rs  intensity_accumulator.rs  lib.rs  min_plus_stencil.rs  min_plus_traversal_d_probe.rs  overlay_add.rs  overlay_orderband.rs  passes.rs  (+18 more)
crates/simthing-mapeditor/: Cargo.toml
crates/simthing-mapgenerator/: Cargo.toml
crates/simthing-sim/: Cargo.toml
crates/simthing-spec/: Cargo.toml
crates/simthing-tools/: Cargo.toml
crates/simthing-workshop/: Cargo.toml  README.md
(+2601 files in other folders)
