[workspace]
resolver = "2"
members = [
    "crates/simthing-core",
    "crates/simthing-gpu",
    "crates/simthing-feeder",
    "crates/simthing-sim",
    "crates/simthing-driver",
    "crates/simthing-spec",
]

[workspace.package]
version    = "0.1.0"
edition    = "2021"
authors    = ["khorum08"]

[workspace.dependencies]
serde       = { version = "1",   features = ["derive"] }
serde_json  = { version = "1" }
serde_with  = { version = "3" }
smallvec    = { version = "1",   features = ["serde"] }
rayon       = { version = "1" }
thiserror   = { version = "2" }
wgpu        = { version = "22" }
bytemuck    = { version = "1",   features = ["derive"] }
pollster    = { version = "0.3" }

[profile.dev]
opt-level = 1

[profile.release]
lto       = "thin"
