[package]
name    = "simthing-clausething"
version.workspace = true
edition = "2024"
authors.workspace = true
description = "ClauseScript front-end parser for SimThing (default-off; CT track)"

[lib]
doctest = false

[dependencies]
serde           = { workspace = true }
serde_json      = { workspace = true }
simthing-core   = { path = "../simthing-core" }
simthing-spec   = { path = "../simthing-spec" }

[dev-dependencies]
ron              = "0.8"
serde_json       = { workspace = true }
simthing-driver  = { path = "../simthing-driver" }
simthing-feeder  = { path = "../simthing-feeder" }
simthing-gpu     = { path = "../simthing-gpu" }
simthing-sim     = { path = "../simthing-sim" }

[features]
default = []
serde = []
faster_writer = []
