[package]
name        = "simthing-core"
description = "SimThing semantic foundation: types, registry, CPU reference evaluator"
version.workspace    = true
edition.workspace    = true
authors.workspace    = true

[dependencies]
serde      = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }
smallvec   = { workspace = true }
thiserror  = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
