[package]
name    = "simthing-driver"
version.workspace = true
edition.workspace = true
authors.workspace = true

[[bin]]
name = "simthing"
path = "src/main.rs"

[dependencies]
simthing-core   = { path = "../simthing-core" }
simthing-feeder = { path = "../simthing-feeder" }
simthing-gpu    = { path = "../simthing-gpu" }
simthing-sim    = { path = "../simthing-sim" }
serde           = { workspace = true }
serde_json      = { workspace = true }
ron             = "0.8"
thiserror       = { workspace = true }
