[package]
name    = "simthing-driver"
version.workspace = true
edition.workspace = true
authors.workspace = true

[[bin]]
name = "simthing"
path = "src/main.rs"

[dependencies]
simthing-core   = { path = "../simthing-core" }
simthing-feeder = { path = "../simthing-feeder" }
simthing-gpu    = { path = "../simthing-gpu" }
simthing-sim    = { path = "../simthing-sim" }
simthing-spec   = { path = "../simthing-spec" }
serde           = { workspace = true }
serde_json      = { workspace = true }
ron             = "0.8"
thiserror       = { workspace = true }

[dev-dependencies]
tempfile         = "3"
simthing-clausething = { path = "../simthing-clausething" }
simthing-mapeditor = { path = "../simthing-mapeditor" }
simthing-sim = { path = "../simthing-sim" }
# Test-only: Phase M-JIT-0 generic EvalEML WGSL emission prototype compiles/runs generated
# shaders through wgpu. Not used by the production binary (no production JIT wiring).
wgpu             = { workspace = true }
bytemuck         = { workspace = true }
pollster         = { workspace = true }
