[package]
name    = "simthing-feeder"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
simthing-core = { path = "../simthing-core" }
simthing-gpu  = { path = "../simthing-gpu" }
bytemuck      = { workspace = true }
serde         = { workspace = true }
thiserror     = { workspace = true }

[dev-dependencies]
serde_json    = { workspace = true }
