[package]
name = "simthing-mapeditor"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "SimThing Studio — Bevy map editor shell (presentation/authoring over MapGenerator output)"
publish = false

[[bin]]
name = "simthing-studio"
path = "src/main.rs"

[[example]]
name = "write_vertical_seed_fixture"
path = "examples/write_vertical_seed_fixture.rs"

[lib]
doctest = false

[dependencies]
bevy = { version = "0.16", default-features = true, features = ["bevy_ui"] }
bevy_egui = { version = "0.36", default-features = true, features = ["serde"] }
directories = "6"
ron = "0.8"
serde = { workspace = true }
serde_json = { workspace = true }
simthing-core = { path = "../simthing-core" }
simthing-clausething = { path = "../simthing-clausething" }
simthing-gpu = { path = "../simthing-gpu" }
simthing-mapgenerator = { path = "../simthing-mapgenerator" }
simthing-spec = { path = "../simthing-spec" }
simthing-tools = { path = "../simthing-tools", features = ["world-text-3d"] }
simthing-driver = { path = "../simthing-driver" }
rfd = "0.15"
thiserror = { workspace = true }

[dev-dependencies]
tempfile = "3"
simthing-tools = { path = "../simthing-tools", features = ["world-text-3d"] }
simthing-driver = { path = "../simthing-driver" }
simthing-sim = { path = "../simthing-sim" }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_UI_WindowsAndMessaging"] }
