[package]
name    = "simthing-sim"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
simthing-core    = { path = "../simthing-core" }
simthing-gpu     = { path = "../simthing-gpu" }
simthing-feeder  = { path = "../simthing-feeder" }
bytemuck         = { workspace = true }
thiserror        = { workspace = true }
serde            = { workspace = true }
serde_json       = { workspace = true }
