[package]
name    = "simthing-spec"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
simthing-core = { path = "../simthing-core" }
serde         = { workspace = true }
thiserror     = { workspace = true }
ron           = "0.8"

[dev-dependencies]
serde_json = { workspace = true }
