[package]
name    = "simthing-spec"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
simthing-core   = { path = "../simthing-core" }
simthing-feeder = { path = "../simthing-feeder" }
serde           = { workspace = true }
serde_json      = { workspace = true }
thiserror       = { workspace = true }
ron             = "0.8"

[dev-dependencies]
serde_json   = { workspace = true }
simthing-gpu = { path = "../simthing-gpu" }
simthing-sim = { path = "../simthing-sim" }
simthing-driver = { path = "../simthing-driver" }
