[package]
name = "simthing-tools"
version.workspace = true
edition.workspace = true
authors.workspace = true
publish = false

[lib]
doctest = false

[features]
default = []
world-text-3d = ["bevy/bevy_pbr"]

[dependencies]
bevy = { version = "0.16", default-features = false, features = [
    "bevy_asset",
    "bevy_render",
    "bevy_core_pipeline",
    "bevy_sprite",
    "bevy_image",
    "tonemapping_luts",
    "png",
    "std",
    "multi_threaded",
    "async_executor",
] }
bytemuck = { workspace = true, features = ["derive"] }
cosmic-text = "0.13.2"
fontdb = "0.16.2"
guillotiere = "0.6.2"
kurbo = "0.13"
msdf_font = { version = "0.3.1", default-features = false }
pollster = { workspace = true }
resvg = { version = "0.47.0", default-features = false }
ron = "0.8"
serde = { workspace = true, features = ["derive"] }
skrifa = "0.42.1"
swash = "0.2.9"
thiserror = { workspace = true }
tiny-skia = { version = "0.12.0", default-features = false, features = ["std"] }
usvg = { version = "0.47.0", default-features = false }
wgpu = { workspace = true }

[dev-dependencies]
png = "0.18"
pollster = { workspace = true }
wgpu = { workspace = true }
bevy_tasks = "0.16"
bevy = { version = "0.16", default-features = false, features = [
    "bevy_asset",
    "bevy_render",
    "bevy_core_pipeline",
    "bevy_sprite",
    "bevy_image",
    "bevy_window",
    "bevy_winit",
    "tonemapping_luts",
    "png",
    "std",
    "multi_threaded",
    "async_executor",
] }
