[package]
name = "simthing-workshop"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = { workspace = true }
bytemuck = { workspace = true }
pollster = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
simthing-tools = { path = "../simthing-tools" }
thiserror = { workspace = true }
wgpu = { workspace = true }

[dev-dependencies]