[package]
name = "simthing-workshop"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = { workspace = true }
bytemuck = { workspace = true }
pollster = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
simthing-clausething = { path = "../simthing-clausething" }
simthing-core = { path = "../simthing-core" }
simthing-spec = { path = "../simthing-spec" }
simthing-tools = { path = "../simthing-tools" }
thiserror = { workspace = true }
wgpu = { workspace = true }

[dev-dependencies]
tempfile = "3"
simthing-driver = { path = "../simthing-driver" }
simthing-feeder = { path = "../simthing-feeder" }
simthing-gpu = { path = "../simthing-gpu" }
simthing-mapeditor = { path = "../simthing-mapeditor" }
simthing-sim = { path = "../simthing-sim" }
